data/derived/fa15/progs/unify/prog3247.ml.out
Characters 60-71:
  let fixpoint (f,b) = wwhile (if wwhile(f,b) = b then b else wwhile(f,b),b);;
                                                              ^^^^^^^^^^^
Error: This expression has type ('a -> 'a * bool) * 'a
       but an expression was expected of type 'a -> 'a * bool
